[gd_scene format=3 uid="uid://c0dh005a7hnsi"]

[ext_resource type="Script" uid="uid://cehtqrgarb878" path="res://tutorials/05_how_to_fullscreen/how_to_fullscreen.gd" id="1_tbiti"]
[ext_resource type="Texture2D" uid="uid://b7nhxoy8rda7s" path="res://assets/sprites/interactive/button_window.png" id="2_oow47"]
[ext_resource type="Texture2D" uid="uid://bsl16r8ox3uuv" path="res://assets/sprites/interactive/button_fullscreen.png" id="3_t8i1p"]

[node name="HowToFullscreen" type="CanvasLayer" unique_id=1043949787]
layer = 2
script = ExtResource("1_tbiti")

[node name="Window" type="TextureButton" parent="." unique_id=1466723668]
offset_left = 558.0
offset_top = 118.0
offset_right = 758.0
offset_bottom = 318.0
focus_mode = 0
texture_normal = ExtResource("2_oow47")

[node name="FullScreen" type="TextureButton" parent="." unique_id=165377719]
offset_left = 1136.0
offset_top = 118.0
offset_right = 1336.0
offset_bottom = 318.0
focus_mode = 0
texture_normal = ExtResource("3_t8i1p")

[node name="ToggleFullScreen" type="TextureButton" parent="." unique_id=1246932994]
offset_left = 840.0
offset_top = 15.0
offset_right = 1040.0
offset_bottom = 215.0
focus_mode = 0
texture_normal = ExtResource("3_t8i1p")

[connection signal="pressed" from="Window" to="." method="_on_window_pressed"]
[connection signal="pressed" from="FullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="ToggleFullScreen" to="." method="_on_toggle_full_screen_pressed"]
